# ipyhermes

./: .gitignore  README.md  f8343fc9.md  pyproject.toml
ipyhermes/: __init__.py  cli.py  core.py  mcp_server.py  patch.py  toollog.py
ipyhermes/_hermes_skills/caveman/: DESCRIPTION.md
ipyhermes/_hermes_skills/ipython-context/: DESCRIPTION.md
ipyhermes/_hermes_skills/karma/: DESCRIPTION.md
ipyhermes/_hermes_skills/shortcutpy/: DESCRIPTION.md
ipyhermes/_hermes_skills/webba/: DESCRIPTION.md
ipyhermes/_skills/caveman/: SKILL.md
ipyhermes/_skills/ex/: SKILL.md
ipyhermes/_skills/exhash/: SKILL.md
ipyhermes/_skills/ipyhermes-help/: SKILL.md
ipyhermes/_skills/ipython-unicode/: SKILL.md
ipyhermes/_skills/sed/: SKILL.md
tests/: test_core.py
